# nestforge

./: .gitignore  .nestforge.toml  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release-plz.toml
.github/: FUNDING.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  core_feature.yml  feature_request.yml  module_proposal.yml  performance_regression.yml  rfc.yml
.github/workflows/: issue-triage.yml  pr-labeler.yml  release.yml  sync-docs-to-wiki.yml
crates/nestforge/: CHANGELOG.md  Cargo.toml  README.md
crates/nestforge-cache/: Cargo.toml  README.md
crates/nestforge-cache/src/: lib.rs
crates/nestforge-cli/: Cargo.toml  README.md
crates/nestforge-cli/src/: cli.rs  diagnostics.rs  main.rs  transpiler.rs  tui.rs  ui.rs
crates/nestforge-config/: Cargo.toml  README.md
crates/nestforge-config/src/: lib.rs
crates/nestforge-core/: Cargo.toml  README.md
crates/nestforge-core/src/: auth.rs  config.rs  container.rs  documentation.rs  error.rs  http_ext.rs  inject.rs  injectable.rs  lib.rs  logging.rs  module.rs  pipeline.rs  provider.rs  request.rs  resource_service.rs  response.rs  route_builder.rs  store.rs  validation.rs
crates/nestforge-data/: Cargo.toml  README.md
crates/nestforge-data/src/: lib.rs
crates/nestforge-db/: Cargo.toml  README.md
crates/nestforge-db/src/: lib.rs
crates/nestforge-graphql/: Cargo.toml  README.md
crates/nestforge-graphql/src/: lib.rs
crates/nestforge-grpc/: Cargo.toml  README.md
crates/nestforge-grpc/src/: lib.rs
crates/nestforge-http/: Cargo.toml  README.md
crates/nestforge-http/src/: factory.rs  lib.rs  middleware.rs
crates/nestforge-macros/: Cargo.toml  README.md
crates/nestforge-macros/src/: lib.rs
crates/nestforge-microservices/: Cargo.toml  README.md
crates/nestforge-microservices/src/: lib.rs
crates/nestforge-mongo/: Cargo.toml  README.md
crates/nestforge-mongo/src/: lib.rs
crates/nestforge-openapi/: Cargo.toml  README.md
crates/nestforge-openapi/src/: lib.rs
crates/nestforge-orm/: Cargo.toml  README.md
crates/nestforge-orm/src/: lib.rs
crates/nestforge-redis/: Cargo.toml  README.md
crates/nestforge-redis/src/: lib.rs
crates/nestforge-schedule/: Cargo.toml  README.md
crates/nestforge-schedule/src/: lib.rs
crates/nestforge-testing/: Cargo.toml  README.md
crates/nestforge-testing/src/: lib.rs
crates/nestforge-websockets/: Cargo.toml  README.md
crates/nestforge-websockets/src/: lib.rs
crates/nestforge/src/: common.rs  lib.rs
crates/nestforge/tests/: auth_and_http_extractors.rs  cache_interceptor.rs  controller_level_metadata.rs  graphql_router.rs  injectable_services.rs  microservices_registry.rs  openapi_module_docs.rs  pipes.rs  platform_validation_and_query.rs  request_decorators.rs  response_envelopes.rs  response_serializers.rs
docs/: Home.md  README.md  _Footer.md  _Sidebar.md  auth-openapi.md  cache.md  cli-guide.md  config-module.md  core-concepts.md  example-api.md  example-app.md  file-map.md  framework-orm-roadmap.md  graphql.md  grpc.md  guards-interceptors.md  macros.md  microservices.md  middleware.md  module-system.md  project-structure.md  quick-start.md  resource-service-patterns.md  schedule.md  testing.md  websockets.md
examples/hello-nestforge/: Cargo.toml
examples/hello-nestforge-graphql/: .env  Cargo.toml
examples/hello-nestforge-graphql/src/: app_config.rs  app_module.rs  lib.rs  main.rs
examples/hello-nestforge-graphql/src/graphql/: schema.rs
examples/hello-nestforge-grpc/: Cargo.toml  build.rs
examples/hello-nestforge-grpc/src/: app_config.rs  app_module.rs  lib.rs  main.rs
examples/hello-nestforge-grpc/src/grpc/: mod.rs  patterns.rs  service.rs
examples/hello-nestforge-grpc/src/grpc/proto/: hello.rs
examples/hello-nestforge-microservices/: .env.example  Cargo.toml
examples/hello-nestforge-microservices/src/: app_config.rs  app_module.rs  lib.rs  main.rs
examples/hello-nestforge-microservices/src/microservices/: mod.rs  patterns.rs
examples/hello-nestforge-websockets/: Cargo.toml
examples/hello-nestforge-websockets/src/: app_config.rs  app_module.rs  lib.rs  main.rs
examples/hello-nestforge-websockets/src/ws/: events_gateway.rs  mod.rs  patterns.rs
examples/hello-nestforge/src/: app_config.rs  app_controller.rs  app_module.rs  lib.rs  main.rs  settings_module.rs
examples/hello-nestforge/src/controllers/: app_controller.rs  health_controller.rs  mod.rs  settings_controller.rs  users_controller.rs  versioning_controller.rs
examples/hello-nestforge/src/dto/: create_user_dto.rs  mod.rs  update_setting_dto.rs  update_user_dto.rs  user_dto.rs  user_exists_dto.rs  users_count_dto.rs
examples/hello-nestforge/src/guards/: allow_all_guard.rs  mod.rs  require_valid_id_guard.rs
examples/hello-nestforge/src/interceptors/: logging_interceptor.rs  mod.rs
examples/hello-nestforge/src/serializers/: app_config_serializer.rs  mod.rs
examples/hello-nestforge/src/services/: app_config.rs  mod.rs  settings_service.rs  users_service.rs
examples/hello-nestforge/src/settings/: mod.rs
examples/hello-nestforge/src/settings/controllers/: mod.rs  settings_controller.rs
examples/hello-nestforge/src/settings/dto/: create_setting_dto.rs  mod.rs  setting_dto.rs
examples/hello-nestforge/src/settings/services/: mod.rs  settings_service.rs
examples/hello-nestforge/src/users/: mod.rs
examples/hello-nestforge/src/users/controllers/: mod.rs  users_controller.rs
examples/hello-nestforge/src/users/dto/: create_user_dto.rs  mod.rs  update_user_dto.rs  user_dto.rs  user_exists_dto.rs  users_count_dto.rs
examples/hello-nestforge/src/users/services/: mod.rs  users_service.rs
examples/hello-nestforge/src/versioning/: mod.rs
examples/hello-nestforge/src/versioning/controllers/: mod.rs
scripts/: release_publish.ps1
tests/: run_all_features.ps1
