[workspace]
members = [
  "crates/nestforge-core",
  "crates/nestforge-http",
  "crates/nestforge",
  "examples/hello-nestforge"
, "crates/nestforge-macros"]
resolver = "2"

[workspace.package]
# Shared package settings for all crates in this workspace.
edition = "2021"
license = "MIT"
version = "0.1.0-alpha"

[workspace.dependencies]
# Shared dependencies so we define versions once and reuse everywhere.
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
anyhow = "1"
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
