[workspace]
members = [
  "crates/nestforge-core",
  "crates/nestforge-http",
  "crates/nestforge",
  "examples/hello-nestforge",
  "examples/hello-nestforge-graphql",
  "examples/hello-nestforge-grpc",
  "crates/nestforge-macros", 
  "crates/nestforge-cli",
  "crates/nestforge-testing",
  "crates/nestforge-db",
  "crates/nestforge-orm",
  "crates/nestforge-config",
  "crates/nestforge-openapi",
  "crates/nestforge-graphql",
  "crates/nestforge-grpc",
  "crates/nestforge-schedule",
  "crates/nestforge-data",
  "crates/nestforge-mongo",
  "crates/nestforge-redis",
  ]
resolver = "2"

[workspace.package]
# Shared package settings for all crates in this workspace.
edition = "2021"
license = "MIT"
version = "1.1.0"
repository = "https://github.com/vernonthedev/nestforge"
homepage = "https://github.com/vernonthedev/nestforge"
readme = "README.md"

[workspace.dependencies]
# Shared dependencies so we define versions once and reuse everywhere.
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
async-graphql = "7"
async-graphql-axum = "7"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-build = "0.12"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "any", "postgres", "mysql", "sqlite"] }

