[package]
name = "nestforge-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "CLI to scaffold and generate NestForge applications"
keywords = ["rust", "cli", "scaffold", "generator", "nestforge"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nestforge"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
nestforge-db = { version = "1.9.0", path = "../nestforge-db" }
clap = { version = "4.5", features = ["derive", "wrap_help", "color"] }
indicatif = "0.17"
miette = { version = "7", features = ["fancy"] }
owo-colors = "4"
ratatui = "0.29"
crossterm = "0.28"
thiserror = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = "3"










