[package]
name = "nestforge-config"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "Environment configuration loading for NestForge"
keywords = ["rust", "config", "env", "nestforge"]
categories = ["config"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
dotenvy = "0.15"
validator = { version = "0.16", features = ["derive"] }
inventory = "0.1"
