[package]
name = "nestforge-core"
# Inherit version/edition/license from root workspace.
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true } # anyhow = easy error handling for now.
thiserror = { workspace = true } # thiserror = cleaner custom errors later.
axum = { workspace = true }
serde = { workspace = true }
http = { workspace = true }