[package]
name = "nestforge-core"
# Inherit version/edition/license from root workspace.
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "Core traits and utilities for the NestForge framework"
keywords = ["rust", "framework", "di", "backend", "nestforge"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
anyhow = { workspace = true } # anyhow = easy error handling for now.
thiserror = { workspace = true } # thiserror = cleaner custom errors later.
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
