[package]
name = "nestforge-core"
# Inherit version/edition/license from root workspace.
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "Core traits and utilities for the NestForge framework"
keywords = ["rust", "framework", "di", "backend", "nestforge"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
nestforge-config = { path = "../nestforge-config" }
validator = { workspace = true }
