[package]
name = "nestforge-data"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "Multi-backend data abstractions for NestForge"
keywords = ["rust", "data", "mongo", "redis", "nestforge"]
categories = ["database"]

[dependencies]
thiserror = { workspace = true }
