[package]
name = "nestforge-http"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# axum is the HTTP engine under the hood.
axum = { workspace = true }
# tokio runs the async server.
tokio = { workspace = true }
# anyhow for simple Result returns while we build the foundation.
anyhow = { workspace = true }
# tower-http gives us middleware (like request tracing).
tower-http = { workspace = true }
# local core crate (DI container + traits).
nestforge-core = { path = "../nestforge-core" }