[package]
name = "nestforge-http"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
axum = { workspace = true } # axum is the HTTP engine under the hood.
tokio = { workspace = true } # tokio runs the async server.
anyhow = { workspace = true } # anyhow for simple Result returns while we build the foundation.
tower-http = { workspace = true } # tower-http gives us middleware (like request tracing).
nestforge-core = { path = "../nestforge-core" } # local core crate (DI container + traits).