[package]
name = "nestforge-microservices"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "Transport-agnostic microservice patterns and handler registry for NestForge"
keywords = ["rust", "framework", "microservices", "messaging", "nestforge"]
categories = ["network-programming", "web-programming"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nestforge-core = { version = "1.6.0", path = "../nestforge-core" }







