[package]
name = "nestforge-schedule"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "Scheduler support for NestForge"
keywords = ["rust", "scheduler", "cron", "tokio", "nestforge"]
categories = ["asynchronous", "web-programming"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
nestforge-core = { version = "1.9.0", path = "../nestforge-core" }









