[package]
name = "nestforge-testing"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "Testing utilities for NestForge modules and DI overrides"
keywords = ["rust", "testing", "framework", "di", "nestforge"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
axum = { workspace = true }
nestforge-core = { version = "1.3.0", path = "../nestforge-core" }
nestforge-graphql = { version = "1.3.0", path = "../nestforge-graphql" }
nestforge-grpc = { version = "1.3.0", path = "../nestforge-grpc" }
nestforge-microservices = { version = "1.3.0", path = "../nestforge-microservices" }
nestforge-websockets = { version = "1.3.0", path = "../nestforge-websockets" }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }




