[package]
name = "nestforge"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "../../README.md"
description = "NestJS-inspired modular backend framework for Rust"
keywords = ["rust", "framework", "backend", "di", "axum"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
nestforge-core = { version = "1.0.0", path = "../nestforge-core" }
nestforge-http = { version = "1.0.0", path = "../nestforge-http" }
nestforge-macros = { version = "1.0.0", path = "../nestforge-macros" }
nestforge-testing = { version = "1.0.0", path = "../nestforge-testing", optional = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
testing = ["dep:nestforge-testing"]
