[package]
name = "hello-nestforge-grpc"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false
build = "build.rs"

[dependencies]
nestforge = { path = "../../crates/nestforge", features = ["config", "grpc", "microservices"] }
tokio = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
