[package]
name = "hello-nestforge-microservices"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
nestforge = { path = "../../crates/nestforge", features = ["config", "microservices", "testing"] }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
