[package]
name = "hello-nestforge-websockets"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
nestforge = { path = "../../crates/nestforge", features = ["config", "websockets", "microservices"] }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
