[package]
name = "hello-nestforge"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
# This example app uses our framework crate.
nestforge = { path = "../../crates/nestforge", features = ["db", "config", "openapi"] }

# axum/tokio are here mostly because we’re still in early setup mode.
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
